fix clip-path on safari

--- a/mediawiki/skins/Timeless/resources/variables.less
+++ b/mediawiki/skins/Timeless/resources/variables.less
@@ -333,6 +333,7 @@ h1#firstHeading {
         height: 33px;
         background-color: #0d0d0d;
         clip-path: polygon(0 62%, 200% -62%, 200% 200%);
+        -webkit-clip-path: polygon(0 62%, 200% -62%, 200% 200%);
         border-bottom: 2px solid #0ce3ac;
       }
     }
